feat(template service): add template versioning
